# THE-EYE-

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  apprunner.yaml  pyproject.toml  railway.json
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/core/: body_limit.py  errors.py  rate_limit.py  request_utils.py  security.py
backend/app/db/: session.py
backend/app/ledger/: append.py  hashing.py  verify.py
backend/app/models/: __init__.py  agent_machine.py  alert_acknowledgment.py  announcement.py  api_key.py  chain_head.py  deletion_request.py  event_flag.py  ingestion_source.py  ledger_event.py  notarization.py  plan.py  session.py  staff_audit_log.py  staff_note.py  tenant.py  user.py  whistleblower_report.py
backend/app/schemas/: alert.py  deletion_request.py  event.py  intrusion.py  investigate.py  source.py  stats.py  tenant.py  user.py  whistleblower.py
backend/app/services/: alert_service.py  deletion_request_service.py  demo_seed.py  event_search.py  (+10 more)
backend/migrations/: env.py
backend/scripts/: bootstrap.py  create_ingestion_source.py  create_tenant.py  create_user.py  seed_dev_events.py  seed_yc.py  start.py  verify_chain.py
backend/tests/: conftest.py  test_alerts.py  test_api_auth.py  test_api_events.py  test_append_chain.py  test_deletion_requests.py  test_forensics.py  test_geoip_service.py  test_hashing.py  test_intrusion.py  test_investigate.py  test_sources_list.py  test_stats.py  test_users.py  test_validation_content_boundary.py  test_whistleblower.py
(+168 files in other folders)
